--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.rangeareascollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.rangeareascollectionupdatedata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.RangeAreasCollectionUpdateData:interface'
-    summary: '一个用于更新 RangeAreasCollection 对象上的数据的接口，可用于 `rangeAreasCollection.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.RangeAreasCollectionUpdateData
-    fullName: Excel.Interfaces.RangeAreasCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.RangeAreasCollectionUpdateData#items:member'
-  - uid: 'excel!Excel.Interfaces.RangeAreasCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.RangeAreasData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.RangeAreasCollectionUpdateData#items~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.RangeAreasCollectionUpdateData#items~0:complex'
-    name: 'Excel.Interfaces.RangeAreasData[]'
-    fullName: 'Excel.Interfaces.RangeAreasData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.RangeAreasData:interface'
-        name: Excel.Interfaces.RangeAreasData
-        fullName: Excel.Interfaces.RangeAreasData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Excel.Interfaces.RangeAreasCollectionUpdateData
+uid: excel!Excel.Interfaces.RangeAreasCollectionUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.RangeAreasCollectionUpdateData
+summary: 一个用于更新 RangeAreasCollection 对象上的数据的接口，可用于 `rangeAreasCollection.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: excel!Excel.Interfaces.RangeAreasCollectionUpdateData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.RangeAreasData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.RangeAreasData:interface" />[]
+metadata:
+  ms.openlocfilehash: a4a2037cb0e32f6555fa0dd1ce203bd6c3252e17
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49321876"
