--- a/docs/docs-ref-autogen/excel_1_12/excel/excel.interfaces.rangeborderdata.yml
+++ b/docs/docs-ref-autogen/excel_1_12/excel/excel.interfaces.rangeborderdata.yml
@@ -1,119 +1,98 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.RangeBorderData:interface'
-    summary: 描述通过调用返回的数据的接口 `rangeBorder.toJSON()`<!-- -->.
-    name: Excel.Interfaces.RangeBorderData
-    fullName: Excel.Interfaces.RangeBorderData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.RangeBorderData#color:member'
-      - 'excel!Excel.Interfaces.RangeBorderData#sideIndex:member'
-      - 'excel!Excel.Interfaces.RangeBorderData#style:member'
-      - 'excel!Excel.Interfaces.RangeBorderData#tintAndShade:member'
-      - 'excel!Excel.Interfaces.RangeBorderData#weight:member'
-  - uid: 'excel!Excel.Interfaces.RangeBorderData#color:member'
-    summary: |-
-      代表 RRGGBB 格式的边框线颜色的 HTML 颜色代码 \# (例如，"FFA500" ) 或作为命名的 HTML 颜色 (例如 "橙色" ) 。
+### YamlMime:TSType
+name: Excel.Interfaces.RangeBorderData
+uid: excel!Excel.Interfaces.RangeBorderData:interface
+package: excel!
+fullName: Excel.Interfaces.RangeBorderData
+summary: 描述通过调用返回的数据的接口 `rangeBorder.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: color
+  uid: excel!Excel.Interfaces.RangeBorderData#color:member
+  package: excel!
+  fullName: color
+  summary: >-
+    代表 RRGGBB 格式的边框线颜色的 HTML 颜色代码 \# (例如，"FFA500" ) 或作为命名的 HTML 颜色 (例如 "橙色" ) 。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: color
-    fullName: color
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'color?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.RangeBorderData#sideIndex:member'
-    summary: |-
-      指示边框的特定边的常量值。 有关详细信息，请参阅 BorderIndex。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: sideIndex
-    fullName: sideIndex
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'sideIndex?: Excel.BorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight" | "InsideVertical" | "InsideHorizontal" | "DiagonalDown" | "DiagonalUp";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.RangeBorderData#sideIndex~0:complex'
-  - uid: 'excel!Excel.Interfaces.RangeBorderData#style:member'
-    summary: |-
-      线条样式的常量之一，指定边框的线条样式。 有关详细信息，请参阅 BorderLineStyle。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'color?: string;'
+    return:
+      type: string
+- name: sideIndex
+  uid: excel!Excel.Interfaces.RangeBorderData#sideIndex:member
+  package: excel!
+  fullName: sideIndex
+  summary: >-
+    指示边框的特定边的常量值。 有关详细信息，请参阅 BorderIndex。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: style
-    fullName: style
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'style?: Excel.BorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Double" | "SlantDashDot";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.RangeBorderData#style~0:complex'
-  - uid: 'excel!Excel.Interfaces.RangeBorderData#tintAndShade:member'
-    summary: |-
-      指定将区域边框的颜色变浅或变暗的双精度值，该值介于-1 (最暗) 和 1 (最明亮的) ，0表示原始颜色。 空值表示边框没有统一的 tintAndShade 设置。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: tintAndShade
-    fullName: tintAndShade
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'tintAndShade?: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.Interfaces.RangeBorderData#weight:member'
-    summary: |-
-      指定区域周围的边框的粗细。 有关详细信息，请参阅 BorderWeight。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'sideIndex?: Excel.BorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight" | "InsideVertical" | "InsideHorizontal" | "DiagonalDown" | "DiagonalUp";'
+    return:
+      type: <xref uid="excel!Excel.BorderIndex:enum" /> | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight" | "InsideVertical" | "InsideHorizontal" | "DiagonalDown" | "DiagonalUp"
+- name: style
+  uid: excel!Excel.Interfaces.RangeBorderData#style:member
+  package: excel!
+  fullName: style
+  summary: >-
+    线条样式的常量之一，指定边框的线条样式。 有关详细信息，请参阅 BorderLineStyle。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: weight
-    fullName: weight
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'weight?: Excel.BorderWeight | "Hairline" | "Thin" | "Medium" | "Thick";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.RangeBorderData#weight~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.RangeBorderData#sideIndex~0:complex'
-    name: Excel.BorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight" | "InsideVertical" | "InsideHorizontal" | "DiagonalDown" | "DiagonalUp"
-    fullName: Excel.BorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight" | "InsideVertical" | "InsideHorizontal" | "DiagonalDown" | "DiagonalUp"
-    spec.typeScript:
-      - uid: 'excel!Excel.BorderIndex:enum'
-        name: Excel.BorderIndex
-        fullName: Excel.BorderIndex
-      - name: ' | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight" | "InsideVertical" | "InsideHorizontal" | "DiagonalDown" | "DiagonalUp"'
-        fullName: ' | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight" | "InsideVertical" | "InsideHorizontal" | "DiagonalDown" | "DiagonalUp"'
-  - uid: 'excel!Excel.Interfaces.RangeBorderData#style~0:complex'
-    name: Excel.BorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Double" | "SlantDashDot"
-    fullName: Excel.BorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Double" | "SlantDashDot"
-    spec.typeScript:
-      - uid: 'excel!Excel.BorderLineStyle:enum'
-        name: Excel.BorderLineStyle
-        fullName: Excel.BorderLineStyle
-      - name: ' | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Double" | "SlantDashDot"'
-        fullName: ' | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Double" | "SlantDashDot"'
-  - uid: 'excel!Excel.Interfaces.RangeBorderData#weight~0:complex'
-    name: Excel.BorderWeight | "Hairline" | "Thin" | "Medium" | "Thick"
-    fullName: Excel.BorderWeight | "Hairline" | "Thin" | "Medium" | "Thick"
-    spec.typeScript:
-      - uid: 'excel!Excel.BorderWeight:enum'
-        name: Excel.BorderWeight
-        fullName: Excel.BorderWeight
-      - name: ' | "Hairline" | "Thin" | "Medium" | "Thick"'
-        fullName: ' | "Hairline" | "Thin" | "Medium" | "Thick"'
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'style?: Excel.BorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Double" | "SlantDashDot";'
+    return:
+      type: <xref uid="excel!Excel.BorderLineStyle:enum" /> | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Double" | "SlantDashDot"
+- name: tintAndShade
+  uid: excel!Excel.Interfaces.RangeBorderData#tintAndShade:member
+  package: excel!
+  fullName: tintAndShade
+  summary: >-
+    指定将区域边框的颜色变浅或变暗的双精度值，该值介于-1 (最暗) 和 1 (最明亮的) ，0表示原始颜色。 空值表示边框没有统一的 tintAndShade 设置。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'tintAndShade?: number;'
+    return:
+      type: number
+- name: weight
+  uid: excel!Excel.Interfaces.RangeBorderData#weight:member
+  package: excel!
+  fullName: weight
+  summary: >-
+    指定区域周围的边框的粗细。 有关详细信息，请参阅 BorderWeight。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'weight?: Excel.BorderWeight | "Hairline" | "Thin" | "Medium" | "Thick";'
+    return:
+      type: <xref uid="excel!Excel.BorderWeight:enum" /> | "Hairline" | "Thin" | "Medium" | "Thick"
+metadata:
+  ms.openlocfilehash: fad538410bfdf9e72306dc09751e4bea59fde122
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49324970"
