--- a/docs/docs-ref-autogen/excel_1_12/excel/excel.interfaces.shapefilldata.yml
+++ b/docs/docs-ref-autogen/excel_1_12/excel/excel.interfaces.shapefilldata.yml
@@ -1,69 +1,62 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ShapeFillData:interface'
-    summary: 描述通过调用返回的数据的接口 `shapeFill.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ShapeFillData
-    fullName: Excel.Interfaces.ShapeFillData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ShapeFillData#foregroundColor:member'
-      - 'excel!Excel.Interfaces.ShapeFillData#transparency:member'
-      - 'excel!Excel.Interfaces.ShapeFillData#type:member'
-  - uid: 'excel!Excel.Interfaces.ShapeFillData#foregroundColor:member'
-    summary: |-
-      代表形状填充前景色的格式为 \# RRGGBB (例如，"FFA500" ) 或用作命名的 HTML 颜色 (例如 "橙色" ) 
+### YamlMime:TSType
+name: Excel.Interfaces.ShapeFillData
+uid: excel!Excel.Interfaces.ShapeFillData:interface
+package: excel!
+fullName: Excel.Interfaces.ShapeFillData
+summary: 描述通过调用返回的数据的接口 `shapeFill.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: foregroundColor
+  uid: excel!Excel.Interfaces.ShapeFillData#foregroundColor:member
+  package: excel!
+  fullName: foregroundColor
+  summary: "代表形状填充前景色的格式为 \\# RRGGBB (例如，\"FFA500\" ) 或用作命名的 HTML 颜色 (例如 \"橙色\" ) \n\n\\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\\]"
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'foregroundColor?: string;'
+    return:
+      type: string
+- name: transparency
+  uid: excel!Excel.Interfaces.ShapeFillData#transparency:member
+  package: excel!
+  fullName: transparency
+  summary: >-
+    将 fill 的透明度百分比指定为 0.0 (不透明) 到 1.0 (clear) 中的值。 如果形状类型不支持透明度或形状填充透明度不一致（例如使用渐变填充类型），则返回 null。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: foregroundColor
-    fullName: foregroundColor
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'foregroundColor?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.ShapeFillData#transparency:member'
-    summary: |-
-      将 fill 的透明度百分比指定为 0.0 (不透明) 到 1.0 (clear) 中的值。 如果形状类型不支持透明度或形状填充透明度不一致（例如使用渐变填充类型），则返回 null。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: transparency
-    fullName: transparency
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'transparency?: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.Interfaces.ShapeFillData#type:member'
-    summary: |-
-      返回形状的填充类型。 有关详细信息，请参阅 Excel.ShapeFillType。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'transparency?: number;'
+    return:
+      type: number
+- name: type
+  uid: excel!Excel.Interfaces.ShapeFillData#type:member
+  package: excel!
+  fullName: type
+  summary: >-
+    返回形状的填充类型。 有关详细信息，请参阅 Excel.ShapeFillType。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type?: Excel.ShapeFillType | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ShapeFillData#type~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.ShapeFillData#type~0:complex'
-    name: Excel.ShapeFillType | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed"
-    fullName: Excel.ShapeFillType | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed"
-    spec.typeScript:
-      - uid: 'excel!Excel.ShapeFillType:enum'
-        name: Excel.ShapeFillType
-        fullName: Excel.ShapeFillType
-      - name: ' | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed"'
-        fullName: ' | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed"'
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type?: Excel.ShapeFillType | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed";'
+    return:
+      type: <xref uid="excel!Excel.ShapeFillType:enum" /> | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed"
+metadata:
+  ms.openlocfilehash: e5f508fead0427481dc7358800795cec03b8a229
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49324739"
